--- a/src/app/blocks/components/header/header.component.html
+++ b/src/app/blocks/components/header/header.component.html
@@ -16,6 +16,6 @@
     <nb-user [menu]="userMenu" [name]="user?.lastName" [picture]="'assets/images/dimouns.jpg'"></nb-user>
   </nb-action>
   <nb-action class="control-item">
-    <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
+    <nb-search type="rotate-layout"></nb-search>
   </nb-action>
 </nb-actions>
