--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -1,4 +1,4 @@
-<nb-card class="col-12 col-sm-6 col-md-11 offset-1">
+<nb-card class="col-12 col-sm-6 col-md-11 offset-xxl-1">
   <nb-card-header>
     Таблиця скопус
   </nb-card-header>
