Table for scopus edited

--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -1,4 +1,5 @@
-<nb-card class="col-12 col-sm-6 col-md-11 offset-xxl-1">
+<div class="row justify-content-xl-end ">
+  <nb-card class="col-11">
   <nb-card-header>
     Таблиця скопус
   </nb-card-header>
@@ -7,4 +8,4 @@
     </ng2-smart-table>
   </nb-card-body>
 </nb-card>
-
+</div>
