--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -3,8 +3,49 @@
     Профайл
   </nb-card-header>
   <nb-card-body>
-    <cl-image public-id="eva_ourwa6" class="thumbnail inline" format="png">
-      <cl-transformation height="150" width="150" gravity="face" radius="max" crop="crop"></cl-transformation>
-    </cl-image>
+
+    <nb-card>
+      <nb-card-header>
+        Головна інформація
+      </nb-card-header>
+      <nb-card-body>
+        <cl-image public-id="eva_ourwa6" class="thumbnail inline" format="png">
+          <cl-transformation height="150" width="150" gravity="face" radius="max" crop="crop"></cl-transformation>
+        </cl-image>
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card>
+      <nb-card-header>
+        Індекс Гірша
+      </nb-card-header>
+      <nb-card-body>
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card>
+      <nb-card-header>
+        Зміна пароля
+      </nb-card-header>
+      <nb-card-body>
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card>
+      <nb-card-header>
+        Контактна інформація
+      </nb-card-header>
+      <nb-card-body>
+      </nb-card-body>
+    </nb-card>
+
+    <nb-card>
+      <nb-card-header>
+        Посилання до соціальних мереж
+      </nb-card-header>
+      <nb-card-body>
+      </nb-card-body>
+    </nb-card>
+
   </nb-card-body>
 </nb-card>
