--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -1,5 +1,5 @@
-<div class="row justify-content-xl-end ">
-  <nb-card class="col-11">
+<div class="row justify-content-sm-center">
+  <nb-card class="col-sm-8">
   <nb-card-header>
     Таблиця скопус
   </nb-card-header>
