--- a/src/app/pages/reports/scopus-report/scopus-report.component.html
+++ b/src/app/pages/reports/scopus-report/scopus-report.component.html
@@ -1,11 +1,3 @@
-<div class="row justify-content-sm-center">
-  <nb-card class="col-sm-8">
-  <nb-card-header>
-    Таблиця скопус
-  </nb-card-header>
-  <nb-card-body>
-    <ng2-smart-table [settings]="settings" (deleteConfirm)="onDeleteConfirm($event)">
-    </ng2-smart-table>
-  </nb-card-body>
-</nb-card>
-</div>
+<p>
+  scopus-report works!
+</p>
