--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -15,6 +15,19 @@
   }
 }
 
+img {
+  vertical-align: baseline;
+}
+
 input[disabled], select[disabled] {
   cursor: auto;
 }
+
+.icon {
+  &-text {
+    font-size: 1rem;
+    vertical-align: 50%;
+  }
+  font-size: 2.25rem;
+}
+
