--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -22,15 +22,15 @@
                 <h5 class="grid-h">Ім'я</h5>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я українською" class="form-control" disabled
-                         value="Ольшевська Ольга Володимирівна"/>
+                         [attr.value]="user.fioUa"/>
                 </div>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я англійською" class="form-control" disabled
-                         value="Olshevska Olga"/>
+                         [attr.value]="user.fioEng"/>
                 </div>
                 <div class="form-group">
                   <input type="text" placeholder="Ім'я російською" class="form-control" disabled
-                         value="Ольшевская Ольга Владимировна"/>
+                         [attr.value]="user.fioRu"/>
                 </div>
               </div>
 
@@ -44,7 +44,7 @@
                            placeholder="Наукова ступінь"
                            type="text"
                            disabled
-                           value="канд.тех.наук"/>
+                           [attr.value]="user.scienceDegree"/>
                   </div>
                 </div>
                 <div class="form-group row">
@@ -55,7 +55,7 @@
                            placeholder="Вчене звання"
                            type="text"
                            disabled
-                           value="-"/>
+                           [attr.value]="user.academicTitle"/>
                   </div>
                 </div>
                 <div class="form-group row">
@@ -66,7 +66,7 @@
                            placeholder="Дата народження"
                            type="text"
                            disabled
-                           value="13/04/1994"/>
+                           [attr.value]="user.birthDate | date :'dd-MM-yyyy'"/>
                   </div>
                 </div>
               </div>
@@ -75,12 +75,10 @@
               <div class="col-lg-3 offset-lg-2">
                 <div class="form-group">
                   <label for="cathedras">Кафедры</label>
-                  <select id="cathedras" disabled class="form-control" multiple="">
-                    <option>АТПІРТС: старший викладач</option>
-                    <option>АТПІРТС: старший викладач</option>
-                    <option>АТПІРТС: старший викладач</option>
-                    <option>АТПІРТС: старший викладач</option>
-                    <option>АТПІРТС: старший викладач</option>
+                  <select id="cathedras" disabled class="form-control" multiple>
+                    <option *ngFor="let cathedra of user.cathedras" [attr.title]="cathedra.name">
+                      {{cathedra.shortName}}: {{cathedra.post}}
+                    </option>
                   </select>
                 </div>
               </div>
@@ -109,31 +107,37 @@
           </nb-card-header>
           <nb-card-body>
             <div class="row">
-              <div title="milo@mail.ru" class="icon col-lg-4">
+              <div [attr.title]="user.email" class="icon col-lg-4">
                 <i class="ion-email"></i>
-                <span class="icon-text">E-mail</span>
+                <span class="icon-text"
+                      [ngClass]="{'icon-email' : user.email}">
+                  E-mail
+                </span>
               </div>
-              <div title="Researcher" class="icon col-lg-4">
+              <div [attr.title]="user.researcherId" class="icon col-lg-4">
                 <img [src]="'assets/images/researcher.png'"/>
-                <a href="http://www.researcherid.com/" class="icon-text">Researcher</a>
+                <a [attr.href]="user.researcherId" class="icon-text">Researcher</a>
               </div>
-              <div title="Orcid" class="icon col-lg-4">
+              <div [attr.title]="user.orcid" class="icon col-lg-4">
                 <img [src]="'assets/images/orcid-logo.png'"/>
-                <a href="http://orcid.org/" class="icon-text">Orcid</a>
+                <a [attr.href]="user.orcid" class="icon-text">Orcid</a>
               </div>
             </div>
             <div class="row">
-              <div title="LinkedIn" class="icon col-lg-4">
+              <div [attr.title]="user.linkedIn" class="icon col-lg-4">
                 <i class="ion ion-social-linkedin"></i>
-                <a href="http://linkedin.com" class="icon-text">LinkedIn</a>
+                <a [attr.href]="user.linkedIn"
+                   class="icon-text">
+                  LinkedIn
+                </a>
               </div>
-              <div title="Scopus" class="icon col-lg-4">
+              <div [attr.title]="user.scopus" class="icon col-lg-4">
                 <img [src]="'assets/images/scopus.png'"/>
-                <a href="http://www.researcherid.com/" class="icon-text">Scopus</a>
+                <a [attr.href]="user.scopus" class="icon-text">Scopus</a>
               </div>
-              <div title="Google Scholar" class="icon col-lg-4">
+              <div [attr.title]="user.googleScholar" class="icon col-lg-4">
                 <img [src]="'assets/images/google-scholar.png'"/>
-                <a href="https://scholar.google.com.ua/" class="icon-text">Google Scholar</a>
+                <a [attr.href]="user.googleScholar" class="icon-text">Google Scholar</a>
               </div>
             </div>
           </nb-card-body>
