--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -28,6 +28,9 @@ input[disabled], select[disabled] {
     font-size: 1rem;
     vertical-align: 50%;
   }
+  &-email {
+    color: #3dcc6d;
+  }
   font-size: 2.25rem;
 }
 
