--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -1,3 +1,24 @@
-<p>
-  employees works!
-</p>
+<nb-card>
+  <nb-card-header>
+    Співробітники
+  </nb-card-header>
+  <nb-card-body>
+    <div class="row luft">
+      <div class="col-lg-6">
+        <div class="input-group">
+          <input #search class="form-control" placeholder="Пошук..." type="text">
+          <span class="input-group-btn">
+              <button class="btn btn-success" (click)="onSearch(search.value)">
+                Пошук
+              </button>
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+      </div>
+    </div>
+  </nb-card-body>
+</nb-card>
