--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -6,18 +6,24 @@
     <div class="row luft">
       <div class="col-lg-6">
         <div class="input-group">
-          <input #search class="form-control" placeholder="Пошук..." type="text">
-          <span class="input-group-btn">
-              <button class="btn btn-success" (click)="onSearch(search.value)">
-                Пошук
-              </button>
+          <span class="input-group-addon success">
+            <i class="ion-search"></i>
           </span>
+          <input #search
+                 class="form-control"
+                 (keyup)="onSearch(search.value)"
+                 [attr.maxlength]="75"
+                 type="text"
+                 placeholder="Введіть параметри пошуку...">
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+        <ng2-smart-table [settings]="settings"
+                         [source]="source"
+                         (deleteConfirm)="onDeleteConfirm($event)">
+        </ng2-smart-table>
       </div>
     </div>
   </nb-card-body>
