--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -1,4 +1,4 @@
-<nb-card>
+<nb-card xmlns="http://www.w3.org/1999/html">
   <nb-card-header>
     Публікації
   </nb-card-header>
@@ -17,8 +17,74 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+        <ng2-smart-table [settings]="settings" [source]="source" (create)="create($event)"></ng2-smart-table>
       </div>
     </div>
   </nb-card-body>
 </nb-card>
+
+<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Добавити нову публiкацiю</h4>
+        <button type="button" class="close pull-right" (click)="lgModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <form>
+
+          <div class = "form-group">
+            <label for = "type">Science Unit Type:</label>
+            <select class = "form-control" id="type" name="type" [(ngModel)]="model.unitType">
+              <option *ngFor="let type of types" [ngValue]="type">{{type}}</option>
+            </select>
+          </div>
+
+
+          <div class = "form-group">
+            <label for = "name">Name</label>
+            <input type = "text" class = "form-control" id = "name"
+                   [(ngModel)] = "model.name" name = "name">
+          </div>
+
+          <div class = "form-group">
+            <label for = "name">Title</label>
+            <input type = "text" class = "form-control" id = "title"
+                   [(ngModel)] = "model.title" name = "title">
+          </div>
+
+          <div class = "form-group">
+            <label for = "year">Year</label>
+            <input type = "text" class = "form-control" id = "year"
+                   [(ngModel)] = "model.year" name = "year">
+          </div>
+
+          <div class = "form-group">
+            <label for = "year">Url</label>
+            <input type = "text" class = "form-control" id = "Url"
+                   [(ngModel)] = "model.url" name = "Url">
+          </div>
+
+          <div class = "form-group">
+            <label for = "volume">Volume</label>
+            <input type = "text" class = "form-control" id = "volume"
+                   [(ngModel)] = "model.volume" name = "volume">
+          </div>
+
+          <div class = "form-group">
+            <label for = "publisher">Publisher</label>
+            <input type = "text" class = "form-control" id = "publisher"
+                   [(ngModel)] = "model.publisher" name = "publisher">
+          </div>
+
+          <input type="button" class="btn btn-info" value="Save" (click)="saveUnit()">
+        </form>
+
+
+      </div>
+    </div>
+  </div>
+</div>
