--- a/src/app/blocks/components/login/login.component.html
+++ b/src/app/blocks/components/login/login.component.html
@@ -1,40 +1,48 @@
 <nb-auth-block>
   <h2 class="title">Логін</h2>
   <form (ngSubmit)="login()" #form="ngForm" autocomplete="nope">
-    <div class="form-group">
-      <label for="input-nick" class="sr-only">Нікнейм</label>
-      <input name="nick" [(ngModel)]="user.nick" id="input-nick"
-             class="form-control" placeholder="Нікнейм" #nick="ngModel"
-             [class.form-control-danger]="nick.invalid && nick.dirty"
-             autofocus [required]="true">
-      <small class="form-text error" *ngIf="nick.invalid && nick.dirty && nick.errors?.required">
-        Потрібен нік!
-      </small>
+    <div class="form-group row">
+      <div class="col-lg-8 offset-lg-2">
+        <label for="input-nick" class="sr-only">Нікнейм</label>
+        <input name="nick" [(ngModel)]="user.nick" id="input-nick"
+               class="form-control" placeholder="Нікнейм" #nick="ngModel"
+               [class.form-control-danger]="nick.invalid && nick.dirty"
+               autofocus [required]="true">
+        <small class="form-text error" *ngIf="nick.invalid && nick.dirty && nick.errors?.required">
+          Потрібен нік!
+        </small>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="input-password" class="sr-only">Пароль</label>
-      <input name="password" [(ngModel)]="user.password" type="password" id="input-password"
-             class="form-control" placeholder="Пароль" #password="ngModel"
-             [class.form-control-danger]="password.invalid && password.dirty"
-             [required]="true"
-             [minlength]="6"
-             [maxlength]="20">
-      <small class="form-text error" *ngIf="password.invalid && password.dirty && password.errors?.required">
-        Потрібен пароль!
-      </small>
-      <small
-        class="form-text error"
-        *ngIf="password.invalid && password.dirty && (password.errors?.minlength || password.errors?.maxlength)">
-        Пароль потребує
-        від 6
-        до 20
-        символів
-      </small>
+    <div class="form-group row">
+      <div class="col-lg-8 offset-lg-2">
+        <label for="input-password" class="sr-only">Пароль</label>
+        <input name="password" [(ngModel)]="user.password" type="password" id="input-password"
+               class="form-control" placeholder="Пароль" #password="ngModel"
+               [class.form-control-danger]="password.invalid && password.dirty"
+               [required]="true"
+               [minlength]="6"
+               [maxlength]="20">
+        <small class="form-text error" *ngIf="password.invalid && password.dirty && password.errors?.required">
+          Потрібен пароль!
+        </small>
+        <small
+          class="form-text error"
+          *ngIf="password.invalid && password.dirty && (password.errors?.minlength || password.errors?.maxlength)">
+          Пароль потребує
+          від 6
+          до 20
+          символів
+        </small>
+      </div>
     </div>
-    <button [disabled]="submitted || !form.valid" class="btn btn-block btn-hero-success"
-            [class.btn-pulse]="submitted"
-            type="submit">
-      Зайти
-    </button>
+    <div class="form-group row">
+      <div class="col-lg-8 offset-lg-2">
+        <button [disabled]="submitted || !form.valid" class="btn btn-block btn-hero-success"
+                [class.btn-pulse]="submitted"
+                type="submit">
+          Зайти
+        </button>
+      </div>
+    </div>
   </form>
 </nb-auth-block>
