--- a/src/app/pages/publications/publications.component.html
+++ b/src/app/pages/publications/publications.component.html
@@ -17,12 +17,13 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <ng2-smart-table [settings]="settings" [source]="source" (create)="create($event)"></ng2-smart-table>
+        <ng2-smart-table [settings]="settings" [source]="source" (create)="create($event)" (edit)="edit($event)" (delete)="delete($event)"></ng2-smart-table>
       </div>
     </div>
   </nb-card-body>
 </nb-card>
 
+<!--insert modal-->
 <div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -81,6 +82,88 @@
           </div>
 
           <input type="button" class="btn btn-info" value="Save" (click)="saveUnit()">
+        </form>
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!--update modal-->
+<div bsModal #updateModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Оновити публiкацiю</h4>
+        <button type="button" class="close pull-right" (click)="lgModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <form>
+          <div class = "form-group">
+            <label for = "updateName">Name</label>
+            <input type = "text" class = "form-control" id = "updateName"
+                   [(ngModel)] = "model.name" name = "name">
+          </div>
+
+          <div class = "form-group">
+            <label for = "updateTitle">Title</label>
+            <input type = "text" class = "form-control" id = "updateTitle"
+                   [(ngModel)] = "model.title" name = "title">
+          </div>
+
+          <div class = "form-group">
+            <label for = "updateYear">Year</label>
+            <input type = "text" class = "form-control" id = "updateYear"
+                   [(ngModel)] = "model.year" name = "year">
+          </div>
+
+          <div class = "form-group">
+            <label for = "updateUrl">Url</label>
+            <input type = "text" class = "form-control" id = "updateUrl"
+                   [(ngModel)] = "model.url" name = "Url">
+          </div>
+
+          <div class = "form-group">
+            <label for = "updateVolume">Volume</label>
+            <input type = "text" class = "form-control" id = "updateVolume"
+                   [(ngModel)] = "model.volume" name = "volume">
+          </div>
+
+          <div class = "form-group">
+            <label for = "updatePublisher">Publisher</label>
+            <input type = "text" class = "form-control" id = "updatePublisher"
+                   [(ngModel)] = "model.publisher" name = "publisher">
+          </div>
+
+          <input type="button" class="btn btn-info" value="Update" (click)="updateUnit()">
+        </form>
+
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--delete modal-->
+<div bsModal #deleteModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Видалити публiкацiю</h4>
+        <button type="button" class="close pull-right" (click)="lgModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <form>
+          <input type="button" class="btn btn-info" value="Delete" (click)="deleteUnit()">
+          <input type="button" class="btn btn-info" value="Ni" (click)="this.deleteModal.hide()">
         </form>
 
 
