--- a/src/app/blocks/popups/add-employee/add-employee.component.html
+++ b/src/app/blocks/popups/add-employee/add-employee.component.html
@@ -13,13 +13,13 @@
     <div class="row">
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['login']"
+               formControlName="login"
                placeholder="Логін"
                type="text">
       </div>
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['fioUkr']"
+               formControlName="fioUkr"
                placeholder="Повне ім'я(укр)"
                type="text">
       </div>
@@ -27,13 +27,13 @@
     <div class="row">
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['fioEng']"
+               formControlName="fioEng"
                placeholder="Повне ім'я(анг)"
                type="text">
       </div>
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['fioRu']"
+               formControlName="fioRu"
                placeholder="Повне ім'я(рос)"
                type="text">
       </div>
@@ -41,13 +41,13 @@
     <div class="row">
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['email']"
+               formControlName="email"
                placeholder="Поштова скринька"
                type="email">
       </div>
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['birth']"
+               formControlName="birth"
                type="date">
       </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="row">
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['password']"
+               formControlName="password"
                placeholder="Пароль"
                type="password">
       </div>
@@ -69,13 +69,13 @@
     <div class="row">
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['hirshScholar']"
+               formControlName="hirshScholar"
                placeholder="Індекс Гірша (Google Scholar)"
                type="text">
       </div>
       <div class="col-lg-6 form-group input-group-sm">
         <input class="form-control"
-               [formControl]="addForm.controls['hirshScopus']"
+               formControlName="hirshScopus"
                placeholder="Індекс Гірша (Scopus)"
                type="text">
       </div>
@@ -109,89 +109,54 @@
         </select>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-4">
-        <label for="cathedra">Кафедра</label>
-        <select id="cathedra"
-                [formControl]="addForm.controls['cathedra']"
-                class="form-control form-control-sm mini-select">
-          <option value="Кріогенної техніки">Кріогенної техніки</option>
-          <option value="Менеджменту">Менеджменту</option>
-        </select>
-      </div>
-      <div class="col-lg-4 form-group input-group-sm">
-        <label for="workPosition">Посада</label>
-        <input id="workPosition"
-               [formControl]="addForm.controls['workPosition']"
-               class="form-control"
-               placeholder="Посада"
-               type="text">
-      </div>
-      <div class="col-lg-2 form-group">
-        <label>Ключова</label>
-        <label class="custom-control custom-radio">
-          <input type="radio"
-                 [formControl]="addForm.controls['keyPosition']"
-                 class="custom-control-input"
-                 name="customRadio"
-                 checked>
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description"></span>
-        </label>
-      </div>
-      <div class="col-lg-2 form-group">
-        <div class="modify-pos-button">
-          <button class="btn btn-success btn-tn" type="button">
-            <i class="ion-plus-round"></i>
-          </button>
+    <div formArrayName="cathedras">
+      <div *ngFor="let pos of addForm.controls['cathedras'].controls; let i=index" [formGroupName]="i">
+        <div class="row">
+          <div class="col-lg-4">
+            <label *ngIf="i === 0">Кафедра</label>
+            <select formControlName="name"
+                    class="form-control form-control-sm mini-select">
+              <option value="Кріогенної техніки">Кріогенної техніки</option>
+              <option value="Менеджменту">Менеджменту</option>
+            </select>
+          </div>
+          <div class="col-lg-4 form-group input-group-sm">
+            <label *ngIf="i === 0">Посада</label>
+            <input formControlName="post"
+                   class="form-control"
+                   placeholder="Посада"
+                   type="text">
+          </div>
+          <div class="col-lg-2 form-group">
+            <label *ngIf="i === 0">Ключова</label>
+            <label class="custom-control custom-radio">
+              <input type="radio"
+                     [formControl]="addForm.controls['keyPosition']"
+                     [checked]="i === 0"
+                     [value]="i"
+                     class="custom-control-input">
+              <span class="custom-control-indicator"></span>
+              <span class="custom-control-description"></span>
+            </label>
+          </div>
+          <div class="col-lg-2 form-group">
+            <div [class.modify-pos-button]="i === 0">
+              <button *ngIf="i === 0; else buttonMinus"
+                      class="btn btn-success btn-tn"
+                      type="button"
+                      (click)="addNewPosition()">
+                <i class="ion-plus-round"></i>
+              </button>
+              <ng-template #buttonMinus>
+                <button class="btn btn-danger btn-tn"
+                        type="button"
+                        (click)="deletePosition(i)">
+                  <i class="ion-minus-round"></i>
+                </button>
+              </ng-template>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4">
-        <select class="form-control form-control-sm mini-select">
-          <option>Кріогенної техніки</option>
-          <option>Менеджменту</option>
-        </select>
-      </div>
-      <div class="col-lg-4 form-group input-group-sm">
-        <input class="form-control" placeholder="Посада" type="text">
-      </div>
-      <div class="col-lg-2 form-group">
-
-        <label class="custom-control custom-radio">
-          <input type="radio" class="custom-control-input" name="customRadio">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description"></span>
-        </label>
-      </div>
-      <div class="col-lg-2 form-group">
-        <button class="btn btn-danger btn-tn" type="button">
-          <i class="ion-minus-round"></i>
-        </button>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4">
-        <select class="form-control form-control-sm mini-select">
-          <option>Кріогенної техніки</option>
-          <option>Менеджменту</option>
-        </select>
-      </div>
-      <div class="col-lg-4 form-group input-group-sm">
-        <input class="form-control" placeholder="Посада" type="text">
-      </div>
-      <div class="col-lg-2 form-group">
-        <label class="custom-control custom-radio">
-          <input type="radio" class="custom-control-input" name="customRadio">
-          <span class="custom-control-indicator"></span>
-          <span class="custom-control-description"></span>
-        </label>
-      </div>
-      <div class="col-lg-2 form-group">
-        <button class="btn btn-danger btn-tn" type="button">
-          <i class="ion-minus-round"></i>
-        </button>
       </div>
     </div>
   </div>
